--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name = Jeff Geerling
-  email = geerlingguy@mac.com
+  name = Rob Alfonso
+  email = rob121@gmail.com
 [core]
   editor = vi
   excludesfile = ~/.gitignore
